software-center (3.1.23.3) UNRELEASED; urgency=low

  [ Aaron Peachey ]
  * utils/submit_review.py:
    - Remove 'unspecified' reason and disable submit button if  
      no reason selected for report abuse (LP: #733366)


software-center (3.1.23.2) natty; urgency=low

  [ Michael Vogt]
  * merged lp:~mmcg069/software-center/little-catview-cleanups
  * merged lp:~mmcg069/software-center/stars-visual-tweaks 
  * softwarecenter/db/database.py, test/test_appstore.py:
    - fix locking and add regression test, thanks to Matthew McGowan
      for the research into this
  * softwarecenter/db/reviews.py:
    - fix support for reviews in not enabled PPAs (like for-pay PPAs)
      LP: #731376
  * softwarecenter/backend/rnrclient_pristine.py:
    - updated to match latest upstream version
  * data/ui/submit_review.ui, data/ui/report_abuse.ui:
    - set softwarecenter icon (thanks to davmor2 for reporting)
  * softwarecenter/db/update.py:
    - add "translated" argument to the parser and store untranslated
      name as well and store untranslated value in the DB
  * softwarecenter/db/application.py:
    - add get_untranslated_app() call 
  * softwarecenter/db/reviews.py:
    - when talking to the rnr-server, always use the untranslated names

  [ Kiwinote ]
  * clean up mimetype handling (allows us to accept apturls once again)
  * softwarecenter/backend/channel.py:
    - don't return two copies of one channel with different names
    - channel query is based on XOO rather than XOL
  * softwarecenter/backend/restfulclient.py:
    - import time on demand, this avoids an attribute error
  * softwarecenter/db/application.py:
    - avoid using unicode(None)
  * softwarecenter/view/softwarepane.py:
    - revert to correct sortmode once searchterm has been cleared
    
  [ Aaron Peachey ]
  * softwarecenter/db/reviews.py:
    - add functionality to keep track of review usefulness votes locally
  * softwarecenter/view/widgets/reviews.py: